# polyopt

./: README  Setup.lhs  lolconfig  polyopt.cabal
example/: Main.hs  Opt.hs  config
src/: Main.hs  Opt.hs  OptDesc.hs  Opts.hs
src/Data/: PolyOpt.hs
