name:           polyopt
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       no-extra-typing command-line/config-file program options
build-type:     Simple
build-depends:  base, haskell98, ConfigFile, template-haskell, mtl, directory

executable:     polyopt
main-is:        Main.hs
hs-source-dirs: src
